<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/shopping_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="15dp"
        android:text="@string/shopping_title"
        android:textAlignment="center"
        android:textColor="#EBEBEB"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/shopping_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_above="@id/shopping_layout"
        android:layout_below="@id/shopping_title"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:paddingBottom="15dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingTop="15dp"
        android:id="@+id/shopping_layout">

        <Button
            android:id="@+id/add_shoppingitem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:background="@drawable/my_button"
            android:text="@string/shopping_item_button"
            android:textColor="#EBEBEBEB" />

        <Button
            android:id="@+id/clear_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:background="@drawable/my_button"
            android:text="@string/clear_all"
            android:textColor="#EBEBEB" />

        <Button
            android:id="@+id/compare_prices"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:textSize="12sp"
            android:background="@drawable/my_button"
            android:text="@string/shopping_compare_button"
            android:textColor="#EBEBEB" />

    </LinearLayout>

</RelativeLayout>