<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ingredients_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:orientation="vertical">


    <!--android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/ingredients_top_question"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/ingredient_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ing_list_lin"
        android:layout_below="@+id/textView"
        android:layout_margin="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <!--app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"-->

    <LinearLayout
        android:id="@+id/ing_list_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/add_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/add_item_button"
            android:textColor="#EBEBEBEB" />

        <Button
            android:id="@+id/find_recipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/vind_recept"
            android:textColor="#EBEBEB" />

    </LinearLayout>
</RelativeLayout>
