<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/recipeButtonExpl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/recipeButtonExpl"
                android:textAlignment="center"
                android:textColor="#B2BABB"
                app:layout_constraintBottom_toTopOf="@+id/recipeButtonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/recipeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                android:onClick="openIngredientSearchButton"
                android:paddingBottom="30dp"
                android:paddingTop="30dp"
                android:text="@string/recipeButtonText"
                android:textColor="#EBEBEBEB"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/recipeButton2Text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/div" />

            <TextView
                android:id="@+id/recipeButton2Expl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:width="200dp"
                android:text="@string/recipeButtonTwoExpl"
                android:textAlignment="center"
                android:textColor="#B2BABB"
                app:layout_constraintBottom_toTopOf="@+id/recipeButton2Text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/recipeButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/my_button"
                android:onClick="openRecipeSearch"
                android:paddingBottom="30dp"
                android:paddingTop="30dp"
                android:text="@string/recipeButtonTwoText"
                android:textColor="#EBEBEB"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/div" />


            <TextView
                android:id="@+id/shoppingButtonExpl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/shoppingButtonExpl"
                android:textAlignment="center"
                android:textColor="#B2BABB"
                app:layout_constraintBottom_toTopOf="@+id/shoppingButtonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/shoppingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                android:onClick="openShoppingList"
                android:paddingBottom="30dp"
                android:paddingTop="30dp"
                android:text="@string/shoppingButtonText"
                android:textColor="#EBEBEB"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipeButton2Text" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
